fixed not centered form field placeholders

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -301,3 +301,7 @@ html {
   display: flex;
   flex-direction: column;
 }
+
+.mat-mdc-form-field-infix {
+  display: flex;
+}
